# Hackaton-IBM-AWS-AIRBUS

./: generate_prediction_training.py  main.py  model.py  pipeline.py  prediction_training.csv  pyproject.toml  requirements.txt  submission.csv
LightGBM/: IMPLEMENTATION_SUMMARY.md  README.md  README_ENSEMBLE.md  SOLUTION_FINALE.md  STRATEGIE_OPTIMISATION.md  compare_results.py  config.py  data_split.py  ensemble.py  evaluate_model.py  feature_selection.py  features.py  features_advanced.py  hyperopt.py  lightgbm_history_feature_importance.csv  lightgbm_history_model.txt  optimize_fast.py  predict_final.py  run_full_optimization.ps1  run_full_optimization.sh  submission_final.csv  train.py  train_ensemble.py  train_optimized.py  training.py
Model_1/: MODEL_RESULTS.md  feature_importance.csv  model_performance_summary.csv  test_predictions.csv  train_corrosion_model.py
Model_2/: MODEL_RESULTS_V2.md  feature_importance.csv  feature_importance_v2.1.csv  model_performance_summary.csv  model_performance_summary_v2.1.csv  test_predictions.csv  test_predictions_v2.1.csv  train_corrosion_model_v2.1.py  train_corrosion_model_v2.py
eva/: model.py  model_acidity_index.py  model_all_features_optimized.py  model_marine_corrosion.py  model_weighted_exposure.py  top_200_features.csv  top_300_features.csv  top_400_features.csv  top_500_features.csv  top_50_features.csv
generer_predictions/: distrib_date.py  prediction_training.csv  test_distributions.py
hybrid/: compare_all.py  compare_submissions.py  data.py  final_simple_lgb.py  final_ultra_optimized.py  tabpfn_optimized_v2.py  (+5 more)
(+35 files in other folders)
