[project]
name = "hackaton-ibm-aws-airbus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "notebook>=7.5.7",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "xgboost>=2.0.0",
]
