[project]
name = "hackaton-ibm-aws-airbus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "optuna>=3.0.0",
    "matplotlib>=3.10.9",
    "notebook>=7.5.7",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "tabpfn-time-series>=1.1.0",
]
